# Icy-Juice

./: AboutPanelController.h  AboutPanelController.m  ChasingArrowsView.h  ChasingArrowsView.m  Contact.h  Contact.m  ContactInfoController.h  ContactInfoController.m  ContactList.h  ContactList.m  ContactListView.h  ContactListView.m  ContactListWindowController.h  ContactListWindowController.m  ContactPlaceholder.h  ContactPlaceholder.m  ContactStatus.h  ContactStatus.m  ContactStatusMessageController.h  ContactStatusMessageController.m  DialogController.h  DialogController.m  DockMenuTrampoline.h  DockMenuTrampoline.m  EnterTextView.h  EnterTextView.m  FindController.h  FindController.m  History.h  History.m  HistoryView.h  HistoryView.m  HistoryWindowController.h  HistoryWindowController.m  ICJDocumentController.h  ICJDocumentController.m  ICJHistoryCell.h  ICJMessage.h  ICJMessage.m  ICJStatusIconCell.h  (+63 more)
BundleResources/: ChasingArrows.tif  Contact DND.tiff  Contact NA.tiff  Contact away.tiff  Contact invisible.tiff  Contact occupied.tiff  Contact online.tiff  Contact pending authorization.tif  ContactList.icns  Delete.tiff  Incoming.aiff  Multiple.tiff  add to contact list.tiff  empty glass.tiff  envelope.tiff  forward arrow.tiff  full glass glowing.tiff  full glass.tiff  fullglass.icns  history book.tiff  message.tiff  offline.tiff  recipients.tiff  reply envelope.tiff  status bar envelope pushed.tiff  status bar envelope.tiff  user info.tiff
BundleResources/English.lproj/: Abbreviated.strings  InfoPlist.strings  Localizable.strings  Sex.plist
BundleResources/English.lproj/AboutPanel.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/ContactInfo.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/ContactListWindow.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/ContactStatusMessage.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/Dialog.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/Find.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/History.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/IncomingFile.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/IncomingMessage.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/MainMenu.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/NetworkProblemAlert.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/NewUserAssistant.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/OutgoingAuthReq.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/OutgoingFile.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/OutgoingMessage.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/PasswordSheet.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/Preferences.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/RejectMessage.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/StatusMessagePanel.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/UserDetails.nib/: classes.nib  info.nib  objects.nib
BundleResources/English.lproj/UserSettings.nib/: classes.nib  info.nib  objects.nib
BundleResources/French.lproj/: Abbreviated.strings  Countries.plist  InfoPlist.strings  Languages.plist  Localizable.strings  Sex.plist
BundleResources/French.lproj/AboutPanel.nib/: objects.nib
BundleResources/French.lproj/ContactInfo.nib/: objects.nib
BundleResources/French.lproj/ContactListWindow.nib/: objects.nib
BundleResources/French.lproj/ContactStatusMessage.nib/: objects.nib
BundleResources/French.lproj/Dialog.nib/: objects.nib
BundleResources/French.lproj/Find.nib/: objects.nib
BundleResources/French.lproj/History.nib/: objects.nib
BundleResources/French.lproj/IncomingFile.nib/: objects.nib
BundleResources/French.lproj/IncomingMessage.nib/: objects.nib
BundleResources/French.lproj/MainMenu.nib/: objects.nib
BundleResources/German.lproj/: Abbreviated.strings  Countries.plist  InfoPlist.strings  Languages.plist  Localizable.strings  Sex.plist  acknowledgments.html  mitzlogo.tiff
BundleResources/Italian.lproj/: Abbreviated.strings  Countries.plist  InfoPlist.strings  Languages.plist  Localizable.strings  Sex.plist  acknowledgments.html
BundleResources/cs.lproj/: Abbreviated.strings  Countries.plist  InfoPlist.strings  Languages.plist  Localizable.strings  Sex.plist
BundleResources/sv.lproj/: Abbreviated.strings  Countries.plist  InfoPlist.strings  Languages.plist  Localizable.strings  Sex.plist
Icy Juice.xcodeproj/: project.pbxproj
libicq2000/: Makefile.am  acinclude.m4  autogen.sh  configure.in  doxyfile.conf  icq2000.exp  icq2000.pch  libicq2000.pc.in
libicq2000.xcodeproj/: project.pbxproj
libicq2000/libicq2000/: Client.h  Contact.h  ContactList.h  Makefile.am  Translator.h  constants.h  events.h  version.h.in
libicq2000/src/: Capabilities.cpp  Capabilities.h  Client.cpp  Contact.cpp  ContactList.cpp  FileTransferClient.cpp  FileTransferClient.h  ICQ.cpp  ICQ.h  Makefile.am  MessageHandler.cpp  MessageHandler.h  SMTPClient.cpp  SNAC-MSG.cpp  SNAC-MSG.h  SNAC-SRV.cpp  SNAC.cpp  SocketClient.cpp  SocketClient.h  TLV.cpp  TLV.h  Xml.cpp  events.cpp  socket.cpp  socket.h
(+94 files in other folders)
